fixed overflow in upcoming release

--- a/src/styles/download.scss
+++ b/src/styles/download.scss
@@ -27,7 +27,3 @@
     text-align: justify;
   }
 }
-
-.react-tabs__tab-list {
-  overflow-x: scroll;
-}
